[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/mask_puzzle.gd" type="Script" id=1]
[ext_resource path="res://Sprites/angry_mask.png" type="Texture" id=2]
[ext_resource path="res://Scripts/mask.gd" type="Script" id=3]
[ext_resource path="res://Sprites/happy_mask.png" type="Texture" id=4]
[ext_resource path="res://Sprites/sad_mask.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -0.355713, -2.14142, 2511.58, -0.0595703, 2525.04, 1543.83, -11.1045, 1553.92 )

[node name="AngryMask" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="HappyMask" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="SadMask" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 5 )
script = ExtResource( 3 )
